external/lmgc90_dev-fortran_lib/src/ChiPy/kernel/wrap_nlgs.h

/**
 * @fn void nlgs_UpdateCohesiveBehav(void)
 * @brief update internal parameters of contact laws for each contact
 *
 * @cond PYDOC
 * python usage : nlgs_UpdateCohesiveBehav(void)
 * @endcond
 */
 extern "C" void nlgs_UpdateCohesiveBehav(void);
/**
 * @fn void nlgs_UpdateFrictionalBehav(void)
 * @brief update internal parameters of contact laws for each contact
 *
 * @cond PYDOC
 * python usage : nlgs_UpdateFrictionalBehav(void)
 * @endcond
 */
 extern "C" void nlgs_UpdateFrictionalBehav(void);
/**
  * @fn void nlgs_GetAllThis(double** matrix_out, int* dim1, int* dim2)
  * @brief Get all interactions in "this" array
  *
  * Each interaction has (in this order): coor, tuc, nuc, rlt, rln, vlt, vln
  * @cond PYDOC
  * usage : interactions = nlgs_GetAllThis()
  * @return interactions (double 2D-array) : the interactions
  * @endcond
  *
  * @cond CDOC
  * @param[in,out] matrix_out (double**) : array of interaction data
  * @param[out]    dim1 (int*)           : number of interaction
  * @param[out]    dim2 (int*)           : number of real data per interaction
  * @endcond
  */
  extern "C" void nlgs_GetAllThis(double** matrix_out, int* dim1, int* dim2);
  /**
  * @fn void nlgs_UseJacobiSolver(bool jacobi)
  * @brief Use a Jacobi solver instead of Gauss Seidel solver
  *
  * @cond PYDOC
  * usage : nlgs_UseJacobiSolver(True) or nlgs_UseJacobiSolver(False)
  * @endcond
  *
  * @cond CDOC
  * @param[in] jacobi (boolean) : set to True to use a Jacobi solver
  * @endcond
  */
  extern "C" void nlgs_UseJacobiSolver(bool jacobi);
 /**
 * @fn void nlgs_UseRegularization(double rvalue1, double rvalue2)
 * @brief use some regularization heuristics on interaction laws
 *
 * @cond PYDOC
 * python usage : nlgs_UseRegularization(krn, krt)
 * @param[in] krn (double)  : normal penality (default 1e14)
 * @param[in] krt (double)  : tangential penality (default 1e14)
 * @endcond
 */
 extern "C" void nlgs_UseRegularization(double rvalue1=1e14, double rvalue2=1e14);
 /**
 * @fn void nlgs_SetTemporaryVariable(int ivalue1, int ivalue2, double rvalue1)
 * @brief set temporary variables used in nlgs ; ivalue2 == 3 gives access to post crack pressure
 *
 * @cond PYDOC
 * python usage : nlgs_SetTemporaryVariable(icdan,id,val)
 * @param[in] icdan (int)  : interaction rank
 * @param[in] id (int)     : value rank
 * @param[in] val (double) : value
 * @endcond
 */

 extern "C" void nlgs_SetTemporaryVariable(int ivalue1, int ivalue2, double rvalue1);
 /**
 * @fn double nlgs_GetTemporaryVariable(int ivalue1, int ivalue2)
 * @brief get temporary variables used in nlgs ; ivalue2 == 3 gives access to post crack pressure
 *
 * @cond PYDOC
 * python usage : val = nlgs_GetTemporaryVariable(icdan,id)
 * @param[in] icdan (int)  : interaction rank
 * @param[in] id (int)     : value rank
 * @param[in] val (double) : value
 * @endcond
 */
 extern "C" double nlgs_GetTemporaryVariable(int ivalue1, int ivalue2);
 /**
 * @fn void nlgs_IsInitialized(int is_init = 1)
 * @brief In case of restart say that nlgs is initialized or reset it
 *
 * @cond PYDOC
 * python usage : nlgs_IsInitialized(is_init=1)
 * @endcond
 */
 extern "C" void nlgs_IsInitialized(int is_init=1);