src/lmgc90_dev/src/ChiPy/kernel/wrap_nlgs.f90


      if( trim(cvalue1) == 'Stored_Delassus_Loops' ) then
        SDLactif = .true.
      else if( trim(cvalue1) == 'Exchange_Local_Global' ) then
        SDLactif = .false.
      else
        call faterr( 'wrap_nlgs::ExSolver', &
                     'Unknown solver type, choose among "Stored_Delassus_Loops" &
                     &and "Exchange_Local_Global"' )
      end if

      call prep_nlgs(SDLactif)

      call stop_itimer(timer_id_prep)

      iter = 0
      DO ib=1,ivalue2

         call start_itimer(timer_id_iter)

         IF( with_quick_scramble ) THEN
           CALL quick_scramble_nlgs
         END IF

         DO ik=1,ivalue1
            iter = iter + 1
            CALL solve_nlgs(1)
         END DO

         call stop_itimer(timer_id_iter)

         call start_itimer(timer_id_check)

         iconv=0
         CALL prep_check_nlgs(iconv)

         IF (iconv == 0 ) RETURN !<- c est quoi cette merde !!!
         CALL solve_nlgs(2)

         CALL comp_check_nlgs(iconv)

         call stop_itimer(timer_id_check)

         call display_check_nlgs

         IF (iconv == 0 .or. iconv == -1) EXIT
      END DO

      call start_itimer(timer_id_post)

      CALL RnodHRloc_nlgs
      CALL solve_nlgs(3)
      CALL Nullify_EntityList_nlgs

      call stop_itimer(timer_id_post)

      if (iconv == -1 ) then
         write(cout,'(A32,I8)') '  @ NLGS diverged at ITERATION: ',iter
         call logmes(cout, .TRUE.)
         call faterr( 'wrap_nlgs::ExSolver', cout)
      end if
      write(cout,'(A20,I8)') '  @ NLGS ITERATION : ',iter
      call logmes(cout)
      ! if( iter == ivalue1*ivalue2 ) call logmes('  @ WARNING : NLGS not converged', .true.)
      if( iter == ivalue1*ivalue2 ) call logmes('  @ WARNING : NLGS not converged')      

    END SUBROUTINE

  SUBROUTINE UpdateCohesiveBehav() bind(C, name = 'nlgs_UpdateCohesiveBehav')
    !! PURPOSE
    !!  update internal parameters of contact laws for each contact
    
    IMPLICIT NONE
    
    CALL update_cohe_nlgs
    
  END SUBROUTINE UpdateCohesiveBehav

  SUBROUTINE UpdateFrictionalBehav() bind(C, name = 'nlgs_UpdateFrictionalBehav')
    !! PURPOSE
    !!  update internal parameters of contact laws for each contact
    
    IMPLICIT NONE
    
    CALL update_fric_nlgs
    
  END SUBROUTINE UpdateFrictionalBehav

  SUBROUTINE GetAllThis(r8_matrix, dim1, dim2) bind(C, name = 'nlgs_GetAllThis')
    IMPLICIT NONE
    TYPE(C_PTR)    :: r8_matrix
    INTEGER(C_INT) :: dim1, dim2

    REAL(KIND=8), DIMENSION(:,:), POINTER :: r8

    r8 => get_all_this()

    if( associated(r8) ) then
      r8_matrix = c_loc(r8(1,1))
      dim1 = size(r8,1)
      dim2 = size(r8,2)
    else
      r8_matrix = c_null_ptr
      dim1 = 0
      dim2 = 0
    end if

  END SUBROUTINE

  SUBROUTINE UseJacobiSolver(jacobi) bind(C, name = 'nlgs_UseJacobiSolver')
    IMPLICIT NONE
    LOGICAL(C_BOOL) ,INTENT(IN), VALUE :: jacobi
    LOGICAL(KIND=4)                    :: jacobi_
    
    jacobi_ = jacobi
    call use_jacobi_solver( jacobi_ )

  END SUBROUTINE

  SUBROUTINE UseRegul(rvalue1,rvalue2) bind(C, name = 'nlgs_UseRegularization')
    IMPLICIT NONE
    REAL(C_DOUBLE), INTENT(IN), VALUE :: rvalue1,rvalue2

    call use_regul(rvalue1,rvalue2)

  END SUBROUTINE

  SUBROUTINE SetTemporaryVariable(ivalue1,ivalue2,rvalue1) bind(C, name = 'nlgs_SetTemporaryVariable')
    IMPLICIT NONE
    INTEGER(C_INT), INTENT(IN), VALUE :: ivalue1,ivalue2    
    REAL(C_DOUBLE), INTENT(IN), VALUE :: rvalue1

    call set_temporary_variable_nlgs(ivalue1,ivalue2,rvalue1)

  END SUBROUTINE

  FUNCTION GetTemporaryVariable(ivalue1,ivalue2) bind(C, name = 'nlgs_GetTemporaryVariable')
    IMPLICIT NONE
    INTEGER(C_INT), INTENT(IN), VALUE :: ivalue1,ivalue2    
    REAL(C_DOUBLE) :: GetTemporaryVariable

    GetTemporaryVariable = get_temporary_variable_nlgs(ivalue1,ivalue2)

  END FUNCTION
  
  subroutine IsInitialized(is_init) bind(C, name = 'nlgs_IsInitialized')
    implicit none
    integer(kind=c_int), intent(in), value :: is_init

    call assume_is_initialized(is_init)

  end subroutine

END MODULE wrap_nlgs
